--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,7 +83,7 @@ header .menu li a:hover {
     align-items: center;
     width: 100vw;
     height: 100vh;
-    background-image: linear-gradient(rgb(29,29,29,0.6), rgb(29,29,29,0.7)), url(imagens-pizza/fundopizza.jpg);
+    background-image: linear-gradient(rgb(29,29,29,0.6), rgb(29,29,29,0.7)), url(../image/fundopizza.jpg);
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
