--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@ body {
 /* Menu */
 header {
     width: 100vw;
-    height: 70px;
+    height: 80px;
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-around;
@@ -53,7 +53,7 @@ header {
     height: 100%;
 }
 
-header .menu {
+nav .menu {
     display: flex;
     justify-content: space-between;
     align-items: center;
